# OminiX-MLX

./: Cargo.toml
deepseek-ocr2-mlx/: Cargo.toml
deepseek-ocr2-mlx/src/: lib.rs
flux-klein-mlx/: Cargo.toml
flux-klein-mlx/src/: klein_model.rs  klein_quantized.rs  layers.rs
index-tts-1.5-mlx/: Cargo.toml  PLAN.md  RESEARCH.md
index-tts-1.5-mlx/examples/: synthesize.rs
index-tts-1.5-mlx/src/: bigvgan.rs  conditioner.rs  config.rs  error.rs  gpt.rs  lib.rs  mel.rs  sampling.rs
mlx-rs-core/src/: cache.rs
ominix-api/: Cargo.toml
ominix-api/src/: main.rs
qwen3-tts-mlx/: STREAMING.md
qwen3-tts-mlx/src/: talker.rs
