[package]
name = "index-tts-15-mlx"
version = "0.1.0"
edition = "2021"
autoexamples = false
description = "IndexTTS 1.5 text-to-speech inference on Apple Silicon using MLX"
keywords = ["tts", "speech-synthesis", "mlx", "index-tts", "voice-cloning"]
categories = ["multimedia::audio"]
license = "MIT OR Apache-2.0"

[dependencies]
mlx-rs = { path = "../mlx-rs" }
mlx-sys = { path = "../mlx-rs/mlx-sys" }
mlx-rs-core = { path = "../mlx-rs-core" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

# Audio I/O
hound = "3"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "synthesize"
path = "examples/synthesize.rs"
